[package]
name = "nats-types"
version = "0.1.0"
authors = ["Kevin Hoffman <kevin.hoffman@capitalone.com>"]
description = "Enumerations and types for representing NATS protocol messages"
license = "MPL-2.0"
homepage = "https://github.com/encabulators/nats-types"
documentation = "https://docs.rs/nats-types"
repository = "https://github.com/encabulators/nats-types"
readme = "README.md"
keywords = ["nats", "protocol", "types"]
categories = ["api-bindings", "algorithms", "Data structures", "Encoding"]

include = [
    "Cargo.toml",
    "LICENSE.txt",
    "src/**/*",
]


[dependencies]
nom = "^4.0"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"