[package]
authors = ["Kevin Hoffman <alothien@gmail.com>"]
categories = [
    "api-bindings",
    "algorithms",
    "data-structures",
    "encoding",
]
description = "Enumerations and types for representing NATS protocol messages"
documentation = "https://docs.rs/nats-types"
homepage = "https://github.com/encabulators/nats-types"
include = [
    "Cargo.toml",
    "LICENSE.txt",
    "src/**/*",
]
keywords = [
    "nats",
    "protocol",
    "types",
]
license = "MPL-2.0"
name = "nats-types"
readme = "README.md"
repository = "https://github.com/encabulators/nats-types"
version = "0.1.1"

[[bench]]
harness = false
name = "nats_types_benchmark"

[badges.travis-ci]
branch = "master"
repository = "encabulators/nats-types"

[dependencies]
nom = "^4.1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
criterion = "0.2.5"
