[package]
name = "nats-types"
version = "0.1.8"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
description = "Enumerations and types for representing NATS protocol messages"
license = "Apache-2.0"
homepage = "https://github.com/encabulators/nats-types"
documentation = "https://docs.rs/nats-types"
repository = "https://github.com/encabulators/nats-types"
readme = "README.md"
keywords = ["nats", "protocol", "types"]
categories = ["api-bindings", "algorithms", "data-structures", "encoding"]
edition = "2018"

include = [
    "Cargo.toml",
    "LICENSE.txt",
    "src/**/*",
]

[badges]
travis-ci = { repository = "encabulators/nats-types", branch = "master" }

[dependencies]
nom = "^4.1.1"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"